# dynv6-docker

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_dynv6.py
.github/workflows/: build-docker-image.yml  build-release.yml
examples/: .env  docker-compose.yaml  dynv6.service
src/: config.rs  dynv6.rs  error.rs  logger.rs  main.py  main.rs  requests.rs  ser.rs  util.rs
src/api/: dyndns.rs  mod.rs  update.rs
src/dynv6/: config.py  dynv6.py  logger.py
