[package]
name = "dynv6"
version = "0.2.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = '0.10', optional = true }
local-ip-address = "0.5"
ureq = { version = "2.0", default-features = false }
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["env"] }
once_cell = "1.17"
chrono = "0.4"
signal-hook = "0.3"
base64 = "0.21"
native-tls = { version = "0.2", optional = true }

[profile.release]
lto = true
opt-level = "z"
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"

[features]
default = ["ureq/tls"]
native = ["native-tls", "ureq/native-tls"]
vendored-openssl = ["openssl/vendored", "native"]
