[package]
name = "dynv6"
version = "0.2.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = '0.10', optional = true, features = ["vendored"] }
local-ip-address = "0.5"
curl = "0.4"
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
once_cell = "1.17"
chrono = "0.4"
signal-hook = "0.3"
serde_urlencoded = "0.7"

[profile.release]
lto = true
opt-level = "z"
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
