[package]
name = "dynv6"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5"
attohttpc = { version = "0.25", default-features = false, features = [
    "basic-auth",
] }
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
once_cell = "1.17"
chrono = "0.4"
signal-hook = "0.3"

[profile.release]
lto = true
opt-level = "z"
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"

[features]
default = ["attohttpc/tls-native"]
rustls = ["attohttpc/rustls"]
vendored = ["attohttpc/tls-native-vendored"]
