[tool.poetry]
name = "dynv6-docker"
version = "0.1.4-dev"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
netifaces = "^0.11.0"
pydantic = "^1.9.1"
loguru = "^0.6.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
